เพิ่ม features popup ไม่สามารถทอนเงินได้

--- a/app/css/components/_components.scss
+++ b/app/css/components/_components.scss
@@ -23,8 +23,9 @@
 @import "thankyou";
 @import "input-msisdn";
 @import "input-box";
-@import "input-with-keyboard";
+@import "input-with-pad";
 @import "jumbotron";
+@import "modal";
 // ======================================================
 // Devtools
 // ======================================================
