--- a/app/css/components/_input-msisdn.scss
+++ b/app/css/components/_input-msisdn.scss
@@ -7,3 +7,13 @@
     height: 400px;
   }
 }
+
+.input-msisdn-box .content {
+  p {
+    margin: 0;
+  }
+  .input-box {
+    margin-top: 15px;
+    padding-top: 65px;
+  }
+}
