--- a/app/css/components/_input-with-pad.scss
+++ b/app/css/components/_input-with-pad.scss
@@ -19,7 +19,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(24, 24, 24, 0.1);
+    //   background-color: rgba(24, 24, 24, 0.1);
     }
     .pads-number {
         display: none;
