--- a/app/css/layouts/_footer.scss
+++ b/app/css/layouts/_footer.scss
@@ -1,5 +1,30 @@
-.footer {
+.footer-section {
+  position: relative;
+  .signage {
+    position: relative;
+  }
+  .copy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    background: #181818;
+  }
+  .react-mediaplayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+.footer-section .copy {
   p {
+    padding: 0;
     margin: 0;
+    color: #ffd800;
+    font-size: 22px;
   }
 }
