--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -1861,34 +1861,34 @@ span.currency {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#912cf7', endColorstr='#912cf7', GradientType=1);
 }
 
-.footer-ads {
-    float: left;
-    width: 100%;
-}
+// .footer-ads {
+//     float: left;
+//     width: 100%;
+// }
 
-.footer-ads img {
-    display: block;
-}
+// .footer-ads img {
+//     display: block;
+// }
 
-.footer {
-    float: left;
-    width: 100%;
-    height: 40px;
-    background: #181818;
-}
+// .footer {
+//     float: left;
+//     width: 100%;
+//     height: 40px;
+//     background: #181818;
+// }
 
-.footer .copy {
-    float: left;
-    width: 100%;
-    color: #ffd800;
-    line-height: 40px;
-    font-size: 22px;
-    text-align: center;
-}
+// .footer .copy {
+//     float: left;
+//     width: 100%;
+//     color: #ffd800;
+//     line-height: 40px;
+//     font-size: 22px;
+//     text-align: center;
+// }
 
-.footer .copy p {
-    padding: 0;
-}
+// .footer .copy p {
+//     padding: 0;
+// }
 
 .with-pads {
     position: relative;
