--- a/app/css/components/_title-hgroup.scss
+++ b/app/css/components/_title-hgroup.scss
@@ -20,8 +20,9 @@ h4 { font-size:33px; }
 h5 { font-size:27px; }
 
 p {
-    font-size: 34px;
-    padding:15px 0 0 0;
+    margin: 0;
+    // font-size: 34px;
+    // padding:15px 0 0 0;
 }
 
 /*--------------------------------------------------------------
