--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4874,8 +4874,7 @@ h5 {
   font-size: 27px; }
 
 p {
-  font-size: 34px;
-  padding: 15px 0 0 0; }
+  margin: 0; }
 
 /*--------------------------------------------------------------
 - Title Style
