--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -39,6 +39,11 @@ span.currency {
     .temperature {}
 }
 
+.action-back {
+    position: absolute;
+    bottom: 25px;
+}
+
 .wrapper {
     position: relative;
     margin: 0 auto;
