Add UI Discount

--- a/app/css/components/_components.scss
+++ b/app/css/components/_components.scss
@@ -21,11 +21,10 @@
 @import "summary-list";
 @import "loading";
 @import "thankyou";
-@import "input-msisdn";
-@import "input-box";
 @import "input-with-pad";
 @import "jumbotron";
 @import "modal";
+@import "discount-input";
 // ======================================================
 // Devtools
 // ======================================================
