--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -2134,3 +2134,11 @@ span.currency {
         transform: translateY(10px);
     }
 }
+
+.width-250 {
+    width: 250px !important;
+}
+
+.width-100 {
+    width: 100px !important;
+}
