--- a/app/css/components/_input-with-pad.scss
+++ b/app/css/components/_input-with-pad.scss
@@ -1,25 +1,88 @@
+.input-msisdn {
+    .input-msisdn-box-wrapper {
+        padding: 30px 80px;
+        margin-bottom: 15px;
+    }
+    .input-msisdn-box {
+        border-radius: 10px;
+        background-color: #FEC42E;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 400px;
+    }
+}
+
+.input-msisdn-box .content {
+    p {
+        margin: 0;
+        font-size: 34px;
+    }
+    .input-box {
+        margin-top: 15px;
+        &.with-validation {
+            padding-top: 45px;
+        }
+    }
+}
+
+.input-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    .input-validation {
+        width: 100%;
+        position: absolute;
+        color: red;
+        top: 0;
+    }
+    p {
+        margin: 0;
+    }
+    p.sm {
+        font-size: 24px;
+    }
+    small {
+        font-size: 24px;
+        color: $brown;
+    }
+    .input-with-keyboard {
+        display: flex;
+        align-items: center;
+        padding: 0 15px;
+        font-size: 44px;
+        color: $black;
+        border: 2px solid $blue;
+        height: 60px;
+        width: 400px;
+        border-radius: 10px;
+        background-color: $white;
+    }
+}
+
 .input-with-pad {
-    margin-bottom: 15px;
     .input {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0 15px;
-      font-size: 44px;
-      color: $black;
-      border: 2px solid $blue;
-      height: 60px;
-      width: 400px;
-      border-radius: 10px;
-      background-color: $white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 15px;
+        font-size: 44px;
+        color: $black;
+        border: 2px solid $blue;
+        height: 60px;
+        width: 400px;
+        border-radius: 10px;
+        background-color: $white;
     }
     .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-    //   background-color: rgba(24, 24, 24, 0.1);
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; //   background-color: rgba(24, 24, 24, 0.1);
     }
     .pads-number {
         display: none;
@@ -39,12 +102,12 @@
         box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
     }
     .pads-number.open {
-      display: block;
+        display: block;
     }
     .pads-number ul {
-      z-index: 1;
-      position: relative;
-      @include clearul();
+        z-index: 1;
+        position: relative;
+        @include clearul();
     }
     .pads-number li {
         float: left;
@@ -91,7 +154,7 @@
         box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
     }
     .pads-keyboard.open {
-      display: block;
+        display: block;
     }
     .pads-keyboard ul {
         float: left;
