--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4919,8 +4919,8 @@ i.home {
   background-color: #ffc800; }
 
 .content-long-wrapper {
-  height: 1192px;
-  padding: 0 40px 30px;
+  height: 1182px;
+  padding: 0 80px 30px;
   background-color: #ffd800; }
 
 .content-wrapper h2 {
@@ -5166,7 +5166,8 @@ hr {
     font-size: 34px; }
 
 .input-msisdn .input-msisdn-box-wrapper {
-  padding: 30px 80px; }
+  padding: 30px 80px;
+  margin-bottom: 15px; }
 .input-msisdn .input-msisdn-box {
   border-radius: 10px;
   background-color: #FEC42E;
@@ -5180,8 +5181,9 @@ hr {
   margin: 0;
   font-size: 34px; }
 .input-msisdn-box .content .input-box {
-  margin-top: 15px;
-  padding-top: 45px; }
+  margin-top: 15px; }
+  .input-msisdn-box .content .input-box.with-validation {
+    padding-top: 45px; }
 
 .input-box {
   display: flex;
@@ -5213,126 +5215,124 @@ hr {
     border-radius: 10px;
     background-color: #fff; }
 
-.input-with-pad {
-  margin-bottom: 15px; }
-  .input-with-pad .input {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 15px;
-    font-size: 44px;
-    color: #181818;
-    border: 2px solid #0077DB;
-    height: 60px;
-    width: 400px;
-    border-radius: 10px;
-    background-color: #fff; }
-  .input-with-pad .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; }
-  .input-with-pad .pads-number {
-    display: none;
-    position: absolute;
-    width: 290px;
-    padding: 10px;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 4px;
-    background: #329ffb;
-    border-radius: 10px;
-    z-index: 99;
-    -webkit-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42); }
-  .input-with-pad .pads-number.open {
-    display: block; }
-  .input-with-pad .pads-number ul {
-    z-index: 1;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    list-style: none; }
-  .input-with-pad .pads-number li {
-    float: left;
-    width: 80px;
-    height: 80px;
-    margin: 5px;
-    text-align: center; }
-  .input-with-pad .pads-number li a {
-    display: list-item;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    font-family: 'robotobold', 'DB Helvethaica X 45 Li';
-    line-height: 76px;
-    font-size: 36px;
-    font-weight: bold;
-    background: #0077db;
-    border-radius: 10px; }
-  .input-with-pad .pads-number li a:hover {
-    background: #8218ed; }
-  .input-with-pad .pads-number li img {
-    display: inline-block;
-    vertical-align: sub;
-    padding-bottom: 3px; }
-  .input-with-pad .pads-keyboard {
-    display: none;
-    position: absolute;
-    width: 720px;
-    padding: 10px;
-    left: -10px;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 4px;
-    background: #329ffb;
-    border-radius: 10px;
-    z-index: 99;
-    -webkit-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42); }
-  .input-with-pad .pads-keyboard.open {
-    display: block; }
-  .input-with-pad .pads-keyboard ul {
-    float: left;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    list-style: none; }
-  .input-with-pad .pads-keyboard li {
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    margin-left: 4px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    text-align: center; }
-  .input-with-pad .pads-keyboard li a {
-    display: list-item;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    font-family: 'robotobold', 'DB Helvethaica X 45 Li';
-    line-height: 56px;
-    font-size: 36px;
-    font-weight: bold;
-    background: #0077db;
-    border-radius: 10px; }
-  .input-with-pad .pads-keyboard li a:hover {
-    background: #8218ed; }
-  .input-with-pad .pads-keyboard li img {
-    display: inline-block;
-    vertical-align: sub;
-    padding-bottom: 3px;
-    vertical-align: middle; }
+.input-with-pad .input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 15px;
+  font-size: 44px;
+  color: #181818;
+  border: 2px solid #0077DB;
+  height: 60px;
+  width: 400px;
+  border-radius: 10px;
+  background-color: #fff; }
+.input-with-pad .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+.input-with-pad .pads-number {
+  display: none;
+  position: absolute;
+  width: 290px;
+  padding: 10px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+  background: #329ffb;
+  border-radius: 10px;
+  z-index: 99;
+  -webkit-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
+  -moz-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
+  box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42); }
+.input-with-pad .pads-number.open {
+  display: block; }
+.input-with-pad .pads-number ul {
+  z-index: 1;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+.input-with-pad .pads-number li {
+  float: left;
+  width: 80px;
+  height: 80px;
+  margin: 5px;
+  text-align: center; }
+.input-with-pad .pads-number li a {
+  display: list-item;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  font-family: 'robotobold', 'DB Helvethaica X 45 Li';
+  line-height: 76px;
+  font-size: 36px;
+  font-weight: bold;
+  background: #0077db;
+  border-radius: 10px; }
+.input-with-pad .pads-number li a:hover {
+  background: #8218ed; }
+.input-with-pad .pads-number li img {
+  display: inline-block;
+  vertical-align: sub;
+  padding-bottom: 3px; }
+.input-with-pad .pads-keyboard {
+  display: none;
+  position: absolute;
+  width: 720px;
+  padding: 10px;
+  left: -10px;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+  background: #329ffb;
+  border-radius: 10px;
+  z-index: 99;
+  -webkit-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
+  -moz-box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42);
+  box-shadow: 0px 10px 35px -5px rgba(0, 0, 0, 0.42); }
+.input-with-pad .pads-keyboard.open {
+  display: block; }
+.input-with-pad .pads-keyboard ul {
+  float: left;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+.input-with-pad .pads-keyboard li {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  margin-left: 4px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: center; }
+.input-with-pad .pads-keyboard li a {
+  display: list-item;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  font-family: 'robotobold', 'DB Helvethaica X 45 Li';
+  line-height: 56px;
+  font-size: 36px;
+  font-weight: bold;
+  background: #0077db;
+  border-radius: 10px; }
+.input-with-pad .pads-keyboard li a:hover {
+  background: #8218ed; }
+.input-with-pad .pads-keyboard li img {
+  display: inline-block;
+  vertical-align: sub;
+  padding-bottom: 3px;
+  vertical-align: middle; }
 
 .vms-jumbotron {
   display: flex;
@@ -5494,6 +5494,15 @@ hr {
 .box-modal .content-modal .footer {
   border-top: 1px solid #eee;
   padding: 15px 0; }
+
+.discount-input {
+  margin-bottom: 25px; }
+  .discount-input p {
+    margin: 0;
+    font-size: 34px; }
+  .discount-input small {
+    font-size: 24px;
+    color: #815800; }
 
 .development-toolbar {
   position: fixed;
@@ -7728,6 +7737,12 @@ span.currency {
     transform: translateY(-10px); }
   50% {
     transform: translateY(10px); } }
+.width-250 {
+  width: 250px !important; }
+
+.width-100 {
+  width: 100px !important; }
+
 .vms-nav .header {
   height: 80px;
   padding: 20px 40px;
