--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -22,7 +22,7 @@ span.currency {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
+    // padding: 10px 0;
     .item {
         border-radius: 30px;
         border: 1px dashed;
@@ -81,7 +81,8 @@ span.currency {
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 30px 0 20px 0;
+    // padding: 30px 0 20px 0;
+    padding: 15px 0 20px 0;
 }
 
 .product-items .box-slick {
