--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5934,8 +5934,7 @@ span.currency {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-  padding: 10px 0; }
+  align-items: center; }
   .title-panel .item {
     border-radius: 30px;
     border: 1px dashed;
@@ -5980,7 +5979,7 @@ span.currency {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 30px 0 20px 0; }
+  padding: 15px 0 20px 0; }
 
 .product-items .box-slick {
   position: relative; }
