--- a/app/css/components/_layout.scss
+++ b/app/css/components/_layout.scss
@@ -123,3 +123,16 @@
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
   }
 }
+
+.fullscreen-wrapper {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
