Popup Ads finished

--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -16,6 +16,9 @@ span.currency {
     font-family: 'DB Helvethaica X 45 Li', Arial, sans-serif;
 }
 
+span.highlight-red {
+    color: red;
+}
 .title-panel {
     position: relative;
     display: flex;
