--- a/app/css/components/_modal.scss
+++ b/app/css/components/_modal.scss
@@ -50,7 +50,7 @@
     position: relative;
     border: 1px solid #ccc;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
     z-index: 10;
     word-wrap: break-word;
     opacity: 0;
@@ -145,6 +145,26 @@
   .or {
     margin: 20px 0;
     font-weight: 700;
+  }
+}
+
+.box-modal .content-modal .ads-confirm {
+  h2 {
+    position: relative;
+    font-weight: bold;
+    font-size: 60px;
+    padding-bottom: 0;
+    line-height: 1.2;
+  }
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 40px;
+  }
+  small {
+    color: $brown;
   }
 }
 
