--- a/app/css/components/_development-toolbar.scss
+++ b/app/css/components/_development-toolbar.scss
@@ -5,6 +5,7 @@
   width: 100%;
   background-color: black;
   padding: 10px 0;
+  z-index: 9999999;
   ul {
     @include clearul();
     display: flex;
