--- a/app/css/components/_layout.scss
+++ b/app/css/components/_layout.scss
@@ -13,6 +13,10 @@
   padding: 40px 80px 20px 80px;
   @extend .content-height;
   background-color: $yellow;
+  display: flex;
+  > div:first-of-type {
+    flex: 1;
+  }
 }
 .title-wrapper {
   height: 590px;
