--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6565,7 +6565,6 @@ hr {
     font-size: 25px; }
 
 .event-box {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8877,6 +8876,19 @@ span.highlight-red {
   margin: 0;
   color: #ffd800;
   font-size: 22px; }
+
+.maintenance-box {
+  display: flex;
+  flex-direction: column;
+  height: 1920px;
+  width: 1080px;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffd800; }
+  .maintenance-box h1 > i {
+    color: #8e30f8; }
+  .maintenance-box h2 {
+    color: #815800; }
 
 ._unmargin {
   margin: 0 !important; }
