--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -8,6 +8,20 @@ body {
     height: 1920px;
 }
 
+span.step {
+    background: $white;
+    border-radius: 0.8em;
+    -moz-border-radius: 0.8em;
+    -webkit-border-radius: 0.8em;
+    color: $blue;
+    display: inline-block;
+    font-weight: bold;
+    line-height: 0.9em;
+    margin-right: 10px;
+    text-align: center;
+    width: 0.9em;
+}
+
 span.pt {
     font-family: 'robotobold';
 }
@@ -19,13 +33,13 @@ span.currency {
 span.highlight-red {
     color: red;
 }
+
 .title-panel {
     position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    // padding: 10px 0;
+    align-items: center; // padding: 10px 0;
     .item {
         border-radius: 30px;
         border: 1px dashed;
@@ -83,8 +97,7 @@ span.highlight-red {
 .product-items .box-wrapper {
     position: relative;
     width: 100%;
-    height: 100%;
-    // padding: 30px 0 20px 0;
+    height: 100%; // padding: 30px 0 20px 0;
     padding: 15px 0 20px 0;
 }
 
@@ -1874,18 +1887,15 @@ span.highlight-red {
 //     float: left;
 //     width: 100%;
 // }
-
 // .footer-ads img {
 //     display: block;
 // }
-
 // .footer {
 //     float: left;
 //     width: 100%;
 //     height: 40px;
 //     background: #181818;
 // }
-
 // .footer .copy {
 //     float: left;
 //     width: 100%;
@@ -1894,11 +1904,9 @@ span.highlight-red {
 //     font-size: 22px;
 //     text-align: center;
 // }
-
 // .footer .copy p {
 //     padding: 0;
 // }
-
 .with-pads {
     position: relative;
     padding-top: 15px;
