Resolve image path.

--- a/app/css/components/_layout.scss
+++ b/app/css/components/_layout.scss
@@ -53,6 +53,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
   img:first-child {
     max-width: 380px;
     width: 100%;
